# ConsoleChess

./: CMakeLists.txt  README.md
ConsoleChess/: CMakeLists.txt  Chess.cpp  Chess.h  ChessAudio.cpp  ChessAudio.h  ChessError.h  ConsoleChess.cpp  ConsoleChess.h  Constants.h  Engine.cpp  Engine.h  Move.h  Piece.cpp  Piece.h  Pos.cpp  Pos.h  Strings.cpp  Strings.h  Util.cpp  Util.h  Workers.cpp  Workers.h
